# swgoh_helper

./: .gitignore  README.md  app.py  cache_manager.py  kyrotech_analyzer.py  models.py  pyproject.toml  results_presenter.py  rote_bottleneck_analyzer.py  rote_coverage.py  rote_gap_analyzer.py  swgoh_gg_client.py  test_kyrotech_analyzer.py  test_rote_coverage.py  test_rote_platoon_requirements.py
.github/: copilot-instructions.md
.github/workflows/: tests.yml
data/: gl_requirements.json  journey_guide_requirements.json  relic_costs.json  rote_platoon_requirements.json
docs/: farming_recommendations.md
notebooks/: relic_scarcity_math_breakdown.ipynb
src/swgoh_discord/: bot.py  utils.py
src/swgoh_discord/cogs/: bonus_readiness.py  journey_guide.py  kyrotech.py  rote.py
src/swgoh_helper/: __init__.py  app.py  cache_manager.py  constants.py  gl_path_advisor.py  journey_guide_advisor.py  kyrotech_analyzer.py  models.py  progress.py  progress_scorer.py  results_presenter.py  rote_bonus_readiness.py  rote_bottleneck_analyzer.py  rote_coverage.py  rote_farm_advisor.py  rote_gap_analyzer.py  rote_limited_availability_service.py  rote_models.py  rote_presenter.py  rote_proximity_analyzer.py  swgoh_gg_client.py  test_kyrotech_analyzer.py  test_rote_platoon_requirements.py
src/swgoh_helper/data_access/: __init__.py  abilities_repository.py  base.py  gear_repository.py  guilds_repository.py  players_repository.py  service.py  stats_repository.py  units_repository.py
src/swgoh_helper/exceptions/: __init__.py  app_exceptions.py
src/swgoh_helper/models/: __init__.py  abilities.py  characters.py  enums.py  gac.py  galactic_legend.py  gear.py  guild.py  journey_guide.py  kyrotech.py  player.py  rote.py  ships.py  stats.py  units.py
test/: test_app_cli_args.py  test_app_errors.py  test_app_kyrotech_totals.py  test_app_rote_cli.py  test_bonus_zone_readiness.py  test_data_access.py  test_gl_path_advisor.py  test_journey_guide_advisor.py  test_kyrotech_analyzer.py  test_results_presenter.py  test_rote_bonus_readiness.py  test_rote_coverage.py  test_rote_farm_advisor.py  test_rote_platoon_requirements.py  test_rote_presenter.py  test_rote_proximity_analyzer.py
