[project]
name = "swgoh-helper"
version = "0.1.0"
description = "Tools for analyzing Star Wars Galaxy of Heroes data via the SWGOH.gg API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "python-dotenv",
    "pydantic",
    "requests",
]

[project.optional-dependencies]
discord = [
    "discord.py>=2.3",
]

[project.scripts]
swgoh = "swgoh_helper.app:main"
kyrotech = "swgoh_helper.app:run_kyrotech"
rote-platoon = "swgoh_helper.app:run_rote_platoon"
rote-limited = "swgoh_helper.app:run_rote_limited"
rote-farm = "swgoh_helper.app:run_rote_farm"
rote-bonus-readiness = "swgoh_helper.app:run_rote_bonus_readiness"
swgoh-discord = "swgoh_discord.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swgoh_helper", "src/swgoh_discord"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
